ingress/gateway-api/protected/istio-auth-allow.template.yaml
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  namespace: gateways
  name: main-protected.allow-debug-all
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: main-protected
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts:
        # AuthorizationPolicy can check exact match, prefix or suffix
        # it's not related to wildcard domains
        - '*-d.REPLACE_ME_PROTECTED_DOMAIN_SUFFIX'
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  namespace: gateways
  name: main-protected.allow-admin-group
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: main-protected
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts:
        - '*-a.REPLACE_ME_PROTECTED_DOMAIN_SUFFIX'
    when:
    - key: request.auth.claims[groups]
      values:
      - REPLACE_ME_GROUP_NAME
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  namespace: gateways
  name: main-protected.allow-metrics-group
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: main-protected
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts:
        - '*-m.REPLACE_ME_PROTECTED_DOMAIN_SUFFIX'
    when:
    - key: request.auth.claims[groups]
      values:
      - REPLACE_ME_GROUP_NAME
