ingress/gateway-api/protected/istio-auth-protected-policy.template.yaml
---
# https://istio.io/latest/docs/reference/config/security/authorization-policy/
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: main-protected.require-oidc
  namespace: gateways
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: main-protected
  action: CUSTOM
  provider:
    name: REPLACE_ME_PROVIDER_NAME
  rules:
  - to:
    - operation:
        hosts:
        - '*.REPLACE_ME_PROTECTED_DOMAIN_SUFFIX'
---
# https://istio.io/latest/docs/reference/config/security/request_authentication/
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: main-protected.parse-jwt
  namespace: gateways
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: main-protected
  jwtRules:
  - issuer: https://dex.example.com/
    forwardOriginalToken: true
